--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "remotegamepad": "^0.4.12",
     "vue": "^2.6.10",
-    "vue-hot-reload-api": "^2.3.3"
+    "vue-hot-reload-api": "^2.3.3",
+    "vue2-touch-events": "^2.0.0"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.0",
