--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "homepage": "https://github.com/marcoklein/remotegamepad-ui#readme",
   "dependencies": {
     "remotegamepad": "^0.4.12",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue2-touch-events": "^2.0.0"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.0",
