--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build:docs": "rimraf docs/**/* copyfiles -u 1 src/assets/* docs & parcel build src/index.html -d docs --public-url ./ --out-file index.html --no-source-maps",
     "dev": "copyfiles -u 1 src/assets/* dist & parcel src/index.html --open"
   },
   "repository": {
@@ -26,7 +27,7 @@
   },
   "homepage": "https://github.com/marcoklein/remotegamepad-ui#readme",
   "dependencies": {
-    "remotegamepad": "^0.4.12",
+    "remotegamepad": "^0.4.13",
     "vue": "^2.6.10",
     "vue2-touch-events": "^2.0.0"
   },
@@ -36,6 +37,7 @@
     "bootstrap-vue": "^2.0.0-rc.25",
     "copyfiles": "^2.1.0",
     "parcel-bundler": "^1.12.3",
+    "rimraf": "^2.6.3",
     "sass": "^1.22.3",
     "typescript": "^3.5.2",
     "vue-class-component": "^7.1.0",
