sending actions to server

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:docs": "rimraf docs/**/* copyfiles -u 1 src/assets/* docs & parcel build src/index.html -d docs --public-url ./ --out-file index.html --no-source-maps",
+    "build:docs": "rimraf docs/**/* && copyfiles -u 1 src/assets/* docs & parcel build src/index.html -d docs --public-url ./ --out-file index.html --no-source-maps",
     "dev": "copyfiles -u 1 src/assets/* dist & parcel src/index.html --open"
   },
   "repository": {
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/marcoklein/remotegamepad-ui#readme",
   "dependencies": {
-    "remotegamepad": "^0.4.13",
+    "remotegamepad": "^0.5.0",
     "vue": "^2.6.10",
     "vue2-touch-events": "^2.0.0"
   },
