--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/marcoklein/remotegamepad-ui#readme",
   "dependencies": {
     "remotegamepad": "^0.5.0",
+    "screenfull": "^4.2.0",
     "vue": "^2.6.10",
     "vue2-touch-events": "^2.0.0"
   },
